Cifrado de Vignere hecho, con cifrado y descifrado (no he probado recibiendo texto por entrada estandar, pero eso debería funcionar de antes)

--- a/Practica1_P2_G1242/Makefile
+++ b/Practica1_P2_G1242/Makefile
@@ -2,11 +2,12 @@ CC=gcc
 EXE1=afin
 EXE2=afinflujo
 EXE3=hill
+EXE4=vignere
 SRC=src/
 INC= includes/
 LIB=lib/
 
-todo: $(EXE1) $(EXE2) $(EXE3)
+todo: $(EXE1) $(EXE2) $(EXE3) $(EXE4)
 	
 $(EXE1): $(SRC)cifrado_afin.c $(LIB)libgmp.a
 	$(CC) -o $@ $(SRC)cifrado_afin.c $(SRC)algoritmos.c -L. $(LIB)libgmp.a
@@ -16,11 +17,14 @@ $(EXE2): $(SRC)cifrado_afin_+.c $(LIB)libgmp.a
 	
 $(EXE3): $(SRC)cifrado_hill.c $(LIB)libgmp.a
 	$(CC) -o $@ $(SRC)cifrado_hill.c $(SRC)algoritmos.c -L. $(LIB)libgmp.a
+$(EXE4): $(SRC)cifrado_hill.c $(LIB)libgmp.a
+	$(CC) -o $@ $(SRC)cifrado_vignere.c $(SRC)algoritmos.c -L. $(LIB)libgmp.a
 	
 native: $(SRC)algoritmos.c $(SRC)cifrado_afin.c $(SRC)cifrado_afin_+.c $(SRC)cifrado_hill.c
-	$(CC) -o $(EXE1) $(SRC)cifrado_afin.c $(SRC)algoritmos.c -lgmp
-	$(CC) -o $(EXE2) $(SRC)cifrado_afin_+.c $(SRC)algoritmos.c -lgmp
+	$(CC) -g -o $(EXE1) $(SRC)cifrado_afin.c $(SRC)algoritmos.c -lgmp
+	$(CC) -g -o $(EXE2) $(SRC)cifrado_afin_+.c $(SRC)algoritmos.c -lgmp
 	$(CC) -g -o $(EXE3) $(SRC)cifrado_hill.c $(SRC)algoritmos.c -lgmp
+	$(CC) -g -o $(EXE4) $(SRC)cifrado_vignere.c $(SRC)algoritmos.c -lgmp
 	
 clean:
-	rm -f $(EXE1) $(EXE2) $(EXE3)
+	rm -f $(EXE1) $(EXE2) $(EXE3) $(EXE4)
