Empezado cifrado transposicion

--- a/Practica1_P2_G1242/Makefile
+++ b/Practica1_P2_G1242/Makefile
@@ -4,11 +4,12 @@ EXE2=afinflujo
 EXE3=hill
 EXE4=vignere
 EXE5=kasiski
+EXE6=transposicion
 SRC=src/
 INC= includes/
 LIB=lib/
 
-todo: $(EXE1) $(EXE2) $(EXE3) $(EXE4) $(EXE5)
+todo: $(EXE1) $(EXE2) $(EXE3) $(EXE4) $(EXE5) $(EXE6)
 	
 $(EXE1): $(SRC)cifrado_afin.c $(SRC)algoritmos.c $(LIB)libgmp.a
 	$(CC) -o $@ $(SRC)cifrado_afin.c $(SRC)algoritmos.c -L. $(LIB)libgmp.a
@@ -25,12 +26,13 @@ $(EXE4): $(SRC)cifrado_vignere.c $(SRC)algoritmos.c $(LIB)libgmp.a
 $(EXE5): $(SRC)kasiski.c $(SRC)algoritmos.c $(LIB)libgmp.a
 	$(CC) -o $@ $(SRC)kasiski.c $(SRC)algoritmos.c -L. $(LIB)libgmp.a	
 
-native: $(SRC)algoritmos.c $(SRC)cifrado_afin.c $(SRC)cifrado_afin_+.c $(SRC)cifrado_hill.c $(SRC)cifrado_vignere.c $(SRC)kasiski.c
+native: $(SRC)algoritmos.c $(SRC)cifrado_afin.c $(SRC)cifrado_afin_+.c $(SRC)cifrado_hill.c $(SRC)cifrado_vignere.c $(SRC)kasiski.c $(SRC)transposicion.c
 	$(CC) -g -o $(EXE1) $(SRC)cifrado_afin.c $(SRC)algoritmos.c -lgmp
 	$(CC) -g -o $(EXE2) $(SRC)cifrado_afin_+.c $(SRC)algoritmos.c -lgmp
 	$(CC) -g -o $(EXE3) $(SRC)cifrado_hill.c $(SRC)algoritmos.c -lgmp
 	$(CC) -g -o $(EXE4) $(SRC)cifrado_vignere.c $(SRC)algoritmos.c -lgmp
 	$(CC) -g -o $(EXE5) $(SRC)kasiski.c $(SRC)algoritmos.c -lgmp
+	$(CC) -g -o $(EXE6) $(SRC)transposicion.c $(SRC)algoritmos.c -lgmp
 	
 clean:
-	rm -f $(EXE1) $(EXE2) $(EXE3) $(EXE4) $(EXE5)
+	rm -f $(EXE1) $(EXE2) $(EXE3) $(EXE4) $(EXE5) $(EXE6)
