Memoria ej4 hecho y modificado Makefile

--- a/Practica1_P2_G1242/Makefile
+++ b/Practica1_P2_G1242/Makefile
@@ -10,27 +10,7 @@ SRC=src/
 INC= includes/
 LIB=lib/
 
-todo: $(EXE1) $(EXE2) $(EXE3) $(EXE4) $(EXE5) $(EXE6) $(EXE7)
-	
-$(EXE1): $(SRC)cifrado_afin.c $(SRC)algoritmos.c $(LIB)libgmp.a
-	$(CC) -o $@ $(SRC)cifrado_afin.c $(SRC)algoritmos.c -L. $(LIB)libgmp.a
-	
-$(EXE2): $(SRC)cifrado_afin_+.c $(SRC)algoritmos.c $(LIB)libgmp.a
-	$(CC) -o $@ $(SRC)cifrado_afin_+.c $(SRC)algoritmos.c -L. $(LIB)libgmp.a
-	
-$(EXE3): $(SRC)cifrado_hill.c $(SRC)algoritmos.c $(LIB)libgmp.a
-	$(CC) -o $@ $(SRC)cifrado_hill.c $(SRC)algoritmos.c -L. $(LIB)libgmp.a
-
-$(EXE4): $(SRC)cifrado_vignere.c $(SRC)algoritmos.c $(LIB)libgmp.a
-	$(CC) -o $@ $(SRC)cifrado_vignere.c $(SRC)algoritmos.c -L. $(LIB)libgmp.a
-
-$(EXE5): $(SRC)kasiski.c $(SRC)algoritmos.c $(LIB)libgmp.a
-	$(CC) -o $@ $(SRC)kasiski.c $(SRC)algoritmos.c -L. $(LIB)libgmp.a
-	
-$(EXE7): $(SRC)indexofcoincidence.c $(SRC)algoritmos.c $(LIB)libgmp.a
-	$(CC) -o $@ $(SRC)indexofcoincidence.c $(SRC)algoritmos.c -L. $(LIB)libgmp.a	
-
-native: $(SRC)algoritmos.c $(SRC)cifrado_afin.c $(SRC)cifrado_afin_+.c $(SRC)cifrado_hill.c $(SRC)cifrado_vignere.c $(SRC)kasiski.c $(SRC)transposicion.c
+todo: $(SRC)algoritmos.c $(SRC)cifrado_afin.c $(SRC)cifrado_afin_+.c $(SRC)cifrado_hill.c $(SRC)cifrado_vignere.c $(SRC)kasiski.c $(SRC)transposicion.c
 	$(CC) -g -o $(EXE1) $(SRC)cifrado_afin.c $(SRC)algoritmos.c -lgmp -lm
 	$(CC) -g -o $(EXE2) $(SRC)cifrado_afin_+.c $(SRC)algoritmos.c -lgmp -lm
 	$(CC) -g -o $(EXE3) $(SRC)cifrado_hill.c $(SRC)algoritmos.c -lgmp -lm
